--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -16,12 +16,7 @@ table.table .fa {
 	padding: 30px 38px 66px;
 	margin: 0 auto;
 	background-color: #eee;
-	border: 3px dotted rgba(0,0,0,0.1);
-}
-
-.form-signin-heading {
-	text-align:center;
-	margin-bottom: 30px;
+	border: 3px solid rgba(0,0,0,0.1);
 }
 
 .form-control {
